@@ -1,3 +1,9 @@
+2009-03-30: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Policy.pm, DkPolicy.pm: new method "name" to give a
+   short name of the policy
+ * scripts/dkimverify.pl: use the new fetch_policies() api to list
+   the results of applicable policies
+
 2009-03-24: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm (fetch_policies): new method for fetching
    all applicable policies, and is guaranteed not to "die".
